<resources>
    <string name="app_name">臺語辭典</string>
    <string name="app_desc">會使離線使用ê臺語辭典APP</string>

    <string name="nav_dict_tailo">教育部臺語辭典</string>
    <string name="nav_group_more">其他</string>
    <string name="nav_settings">設定</string>
    <string name="nav_help">需要你ê幫贊</string>
    <string name="nav_about">關於</string>
    <string name="nav_licenses">授權資訊</string>

    <string name="fragment_tailo_search_description1">若是欲用「羅馬字」來揣，會使輸入「臺羅」抑是「白話字」，聲調符號欲用「數字」抑是「羅馬字」攏會使。</string>
    <string name="fragment_tailo_search_description2">若是欲聽字詞按怎唸，愛上網才會使聽。</string>
    <string name="fragment_tailo_search_description3"><![CDATA[若有問題會使<a href="http://line.me/ti/p/%40vhy6570i">加我 ê LINE</a>。]]></string>
    <string name="fragment_tailo_search_method">請選一種揣 ê 方式：</string>
    <string name="fragment_tailo_search_button_lomaji">臺語羅馬字</string>
    <string name="fragment_tailo_search_button_hanji">臺語漢字</string>
    <string name="fragment_tailo_search_button_hoagi">對應ê華語漢字</string>
    <string name="fragment_tailo_search_button_all">全文關鍵字</string>

    <string name="search_lomaji_hint">請輸入臺語羅馬字來揣......</string>
    <string name="search_hanji_hint">請輸入臺語漢字來揣......</string>
    <string name="search_hoagi_hint">請輸入對應ê華語漢字來揣......</string>
    <string name="search_all_hint">請輸入全文關鍵字來揣......</string>

    <string name="tailo_search_contains_radiobutton_text">揣有相關ê</string>
    <string name="tailo_search_equals_radiobutton_text">揣攏相仝ê</string>

    <string name="listitem_tailo_search_title_text_1_tailo">臺羅</string>
    <string name="listitem_tailo_search_title_text_2_tailo">漢字</string>
    <string name="listitem_tailo_search_title_text_1_goalaigi">外來語發音</string>
    <string name="listitem_tailo_search_title_text_2_goalaigi">對應 ê 華語</string>
    <string name="toast_voice_need_network_connection">語音ê功能需要上網才會使聽。</string>
    <string name="toast_sorry_cant_play">真歹勢，這無法度聽。</string>

    <string name="activity_tailo_word_title_text_1_goalaigi">發音</string>
    <string name="activity_tailo_word_title_text_2_goalaigi">華語</string>

    <string name="help_fragment_title_card_text">多謝你 ê 使用，若是有啥物問題，請你對下跤 ê 方式來和我反應。\n\n若是你會使來幫贊，不管是建議 kap 指教，抑是提供其他 ê 辭典資料，想欲鬥出力出錢，攏誠歡迎，請和我連絡。</string>
    <string name="help_fragment_feedback_card_title_text">建議 kap 指教</string>
    <string name="help_fragment_help_card_title_text">需要你 ê 幫贊</string>
    <string name="help_fragment_line_account_item_text">加我 ê LINE</string>
    <string name="url_taigidictapp_line_account">http://line.me/ti/p/%40vhy6570i</string>
    <string name="help_fragment_facebook_group_item_text">面冊 ê 社團</string>
    <string name="url_taigidictapp_facebook_group">https://www.facebook.com/groups/TaigiDictApp/</string>
    <string name="help_fragment_email_me_item_text">寫批予我</string>
    <string name="feedback_email">taccotap@gmail.com</string>
    <string name="help_fragment_email_me_mail_title">臺語辭典APP ê 建議 kap 指教</string>
    <string name="help_fragment_rate_app_item_text">若是袂䆀用，請鬥拍 5 粒星！</string>
    <string name="url_taigidictapp_github_repo">https://github.com/shiami/AndroidTaigiDict</string>

    <string name="about_fragment_version_item_text">版本</string>
    <string name="about_fragment_author_card_title_text">作者</string>
    <string name="about_fragment_author_item_text">Hê-bí</string>
    <string name="about_fragment_author_item_subtext">Tánn-káu, Tâi-oân</string>

    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>

    <!-- AboutLibraries -->
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">false</string>
    <!--<string name="aboutLibraries_description_text">臺語辭典 - 會使離線使用ê臺語辭典APP</string>-->

</resources>
