<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.taccotap.taigidict.tailo.TailoDictFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/descIcon1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/ic_menu_camera"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/fragment_tailo_search_description1"
                        android:textColor="#f333"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/descIcon2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/ic_menu_camera"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/fragment_tailo_search_description2"
                        android:textColor="#f333"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/descIcon3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/ic_menu_camera"/>

                    <TextView
                        android:id="@+id/descText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="#f333"
                        android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/fragment_tailo_search_method"
                android:textColor="#f666"
                android:textSize="22sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_search_lmj"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/fragment_tailo_search_button_lomaji"
                    android:textAllCaps="false"
                    android:textColor="#fddd"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button_search_hanji"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/fragment_tailo_search_button_hanji"
                    android:textAllCaps="false"
                    android:textColor="#fddd"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button_search_hoagi"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/fragment_tailo_search_button_hoagi"
                    android:textAllCaps="false"
                    android:textColor="#fddd"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button_search_all"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/fragment_tailo_search_button_all"
                    android:textAllCaps="false"
                    android:textColor="#fddd"
                    android:textSize="24sp"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
